2008-05-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-public.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/dbtransaction.hxx, include/pqxx/except.hxx,
 include/pqxx/notify-listen.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/tablestream.hxx, include/pqxx/transaction_base.hxx:
  - Suppress vtables for abstract classes on Visual C++, thanks Kirit.
2008-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx, src/connection_base.cxx, src/pipeline.cxx:
  - Check for errors during PQconsumeInput()
  - Fixed "endless network timeout."  Thanks Dragomir Ivanov!
  - transaction_base::consume_input() now returns success value.
2008-05-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Changed fix for Visual C++ warning (was bad overload).
2008-05-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/connection_base.cxx, src/pipeline.cxx,
 src/prepared_statement.cxx, src/util.cxx:
  - Fixes for Visual C++ 8 warnings (correct ones)--thanks Kirit Saelensminde
2008-04-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Also look for compilers in /usr/local/bin
2008-04-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/binarystring.cxx, src/connection_base.cxx,
 src/cursor.cxx, src/pipeline.cxx, src/tablereader.cxx, src/util.cxx:
  - Fixed warnings in g++ 4.3
2008-04-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_stateless_cursor.cxx:
  - Test most likely usage pattern: batched sequential retrieval
2008-04-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Removed some unused options to improve Doxygen version compatibility
 src/robusttransaction.cxx:
  - Log failures while creating log table
2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Removed fetch_current_row() (it was odd, and hard to guarantee)
 test/unit/test_sql_cursor.cxx: