@@ -1,3 +1,6 @@
+2008-05-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/util.cxx:
+  - Use numeric_limits to get infinity, if possible.  Thanks Andrew.
 2008-05-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/compiler-public.hxx, include/pqxx/connection_base.hxx,
  include/pqxx/dbtransaction.hxx, include/pqxx/except.hxx,
